reordering and amalgamating - trying to pare down content

--- a/_posts/thesis_chapters/2024-11-6-Gdps.md
+++ b/_posts/thesis_chapters/2024-11-6-Gdps.md
@@ -170,6 +170,20 @@ The last chapter explored the mutual evolution of the learning design, shaped by
 
 While these approaches are  distinct in their pedagogical use, they stemmed from the same germ-cell activity of altering the game through the use of game design patterns via varied means. These include: use as part of meditational strategies by participants and facilitators and as shared objects between participants, facilitators and peers (as explored in chapter three and four).
 
+_Structure of the chapter around 3 planes / activity system scopes_
+
+The sections focus on the way design patterns are used by parents, children and facilitators in this emerging game making community.
+
+To present findings from video data, I draw on the Rogoff's three planes of analysis [@rogoff_observing_1995] as explored in Chapter 4.
+NOTE - IN CHAPTER 4 - OR HERE - MAKE THE LINK BETWEEN THE THREE PLANES AND THE UNITS OF ANALYIS .
+
+It is worthwhile to recall that the three planes can be concieved within a CHAT framework in that the planes can be interpreted as activity happening at wider or narrower scopes.
+
+Acknowledging that these observation do not fall nearly into each of the three planes, I cover observation on the use of GDPs relating to, in turn, cultural activities, interpersonal activity and finally personal knowledge.
+
+DROP?
+The observation of these sections are also guided by concepts of the development of shared objects and meditational tools and strategies and their role in emerging community norms and practices.
+
 <!-- In interpreting the results of this chapter it is of value to explore experiences of participant agency in a way which reflects the mutual development of this design. Thus the intersection of the participant agency and use of GDPs both as introduced and adopted processes will be examined in this chapter. -->
 
 
@@ -194,9 +208,6 @@ NOTE CHECK THESE WITH THE DISCUSSION CONCLUSION.
 - any other value for practitioners, parents and young participants - i.e. in navigation and goal setting.
 - the ability to reflect after implementing each sub project, -->
 
-
-
-
 <!-- #### On GDPs as a concept to help analysis -->
 <!-- MOVE TO METHODOLOGY - JUST GET ON WITH IT?
 Blunden cites the process of identifying a germ cell of activity as a fruitful process for researchers [FIND]. In addition, Engestrom frames expansive learning as instructive for organisational change. While research is more sparse in the field of educational practice, the principles are frequently applied to classroom practice. -->
@@ -210,10 +221,6 @@ tie in conceptts of
 
 
 <!-- MOVED EARLIER HERE - Check it fits? In the literature review and methodology chapter we examined different interpretations of agency used by researchers using activity theory [@hopwood_agency_2022].  -->
-
-
-
-.
 
 <!-- DROP? We can ask where does knowledge of GDPs in participant come from. Good games communicate their affordances, (in the form of GDPs) to the player without the need for extensive additional documentation [@gee_learning_2005]. This process also communicates GDPs implicitly to players, a process borne out by brainstorming sessions early in the process which say participants listing GDPs or variants of them without explicit guidance in this direction. This  goal setting and implementation using GDP as a base developed into a principle activity of P1 with varied results. -->
 
@@ -256,98 +263,7 @@ https://docs.google.com/document/d/1B7kFl5QsGV-oWtFWHLBIJNpa5GeYMlCntq31BnPAQT4/
 -->
 
 <!--
-|**Dialogue**|**Activity**|
-|:----|:----|
-|S: You can ask him for help again if you want.|S is using laptop. T is nearby|
-|T: Why| |
-|S: Cos I can’t do it.| |
-|T: Ok| |
-|Exchange follows with Mick  and S - Problems solving using debugging methods and exchange of information about sequencing of variables.  Ends after several minutes with game exhibiting desired behaviour of moving to next level after collecting a key.| |
-|M: Great|(On Screen) Platform game bug is resolved shown by game progressing to the next level.|
-|S: Thank you.|
-| |
-|Did you see T?|(Off Screen) M cedes computer to S.|
-|T: Did it do it?| |
-|S: Yes| |
-|S: I’ll reload it. Here you go|S presses refresh key to reload the game|
-|T: Laughs|T moves laptop to point towards her and takes over using the keyboard|
-| | |
-|T: (Makes excited cat noise)|T is using arrow keys to control game and check desired behaviour of player progressing to level 2 is working. T progresses|
-| | |
-|T: We need a door in this one.|
-| |
-|I want to make more levels now.|
-| |
-|So you can put lots of doors and lots of keys|
-| |
-|Key Door Key Door Key Door|
-| |
-|Key Door Level. Key Door Level, Key Door Level|S moves computer back to take over the use of they keyboard. She changes tab and navigates to the section of the code which deals with the design of levels and placement of different game components.|
-| | |
-|S. Well. Where are you going to put your door in level two?|
-| |
-|Do you want to change the layout at all?|S gestures to screen|
-|T: What’s door?|S doesn’t move laptop but gets closer to take over keyboard|
-|S: d| |
-|T: Ok| |
-|T: d . Door right there.|Inserts a “d” in an array high above a platform|
-| | |
-|S: And where’s the key going?|
-| |
-|Must be quite hard through get to that door|
-| |
-|Key is K| |
-|T : (Calmly) Ok just let me do something|T starts to delete multiple characters on a line|
-|S: (Alarmed) What are you doing?| |
-|T: You’ll see!|
-| |
-|T: Ah yes| |
-| | |continues
-|S: What are you.. Ah you’re making a platform. I see.|T starts to add x’s to replace the spaces she has deleted|
-| | |
-|T: See!| |
-|S: So where is the key going?| |
-|T: Key, so it’s K?| |
-|S: Yes| |
-|T: Where's K gone| |
-|S: There| S points to the K Key on Keyboard |
-|T: Back. K for Key| |
-|S: Are you putting one in your third level as well?| |
-|T: Yes and then I’m going to make more levels| |
-|T: You do this bit| |
-|T: And then delete those H’s. And in there.| |
-|S: No. No.| |
-|T: Then, let me do it.|(off screen) T takes over the keyboard|
-|S: It’s no fun having a game with any hazards to avoid| |
-|T: Is for me!  \How do you go that way back?|
-| |
-|So sorry for deleting… They just…|(on screen) T deletes hazards in Level 3 of game|
-|Back Back Back|
-| |
-|Oh Oh Oh.|
-| |Rogoff
-|(laughs)|
-| |
-|(replaces another) Back Oh (giggles)|(on screen) T adds three coins to Level 3|
-|S: Goodness me what what the point of designing our car with fumes if we’re not going to use it?| |
-|T: I don’t know (sighs)|
-| |
-|T: You put the key and door in this one.|
-| |
-|T: Go on then. Key - Door - Person.| |
-|S: Person?| |
-|T: Key Door Person.|(off screen) T indicates that her mother is the person she is referring to|
-|T: (laughs)|T start play through of their game again. She progresses past the first level, completes second level. The game then goes back to the first level unexpectedly.|
-|S: Is this the first level again| |
-|T: I think so| |
-|S: OK so our the door for the second level goes back to first level and we want it to go to the third level presumably| |
-|T: Yes (laughs) Yes. Why could that be? That’s silly| |
-|S: I’m just going to go see something.|S dives into the code to try to troubleshoot the problem. T watches for a short while becomes disengaged. She then leaves mother to explore the wider environment of the room and objects within it.| -->
-
-<!--
 #### Summary Commentary on Annotation and Content of Vignette
-
-The vignette including some gesture analysis. This is explore in more detail in a chapter on Methodolgy.
 
 This was particularly valuable in the Key Door Person interchange where meaning was not clear before looking at video.
 In previous chapter on methodology we (will) have examined the coding scheme used to code specifics on interactions and participant behaviour and output.
@@ -364,15 +280,36 @@ MOVE A LOT OF THIS TO THE APPENDIX - CREATE A SUMMARY HERE.
 
 <!-- **Describing on a level of personal** -->
 
-The key and door pattern is one of the harder ones to implement as it involves adding two new functions, which while simple enough, represent new code structures and thus this adds a new level of conceptual and practical complexity. The implementation of a new game design pattern (GDP) involve adding new code to the game. The amount of code and/ changes needed varied depending on its complexity. Larger changes typically need more careful manipulation of code and subsequent debugging. For this pair, these more involved coding activities were beyond the ability of the child. The parent Suzanna has taken on the role of solving harder code problems and in doing so has built important proficiency in coding practice. These include which include; finding and comprehending supporting documentation, fluidly navigating between undertaking more advanced coding to implement new GDPs, playtesting and preparing the coding environment for more basic coding of her child.
+
+As a summary of activity not related specifically to GDPs : use of child to get help, legitimate peripheral participant of child, elements and use of supporting documentation. 
+
+These aspects are analysed in both the vignette 2 and in Chapter 7 with reference to participant agency.
+
+This commentary continues restricted to surfacing aspecs of use of GDPs as a mediational strategy, which are then explored using wider data in the rest of the chapter.
+
+The child shows ongoing affective connection to the game making patterns. For example, one target game design pattern _Keys and Doors_ is repeated in a sing song voice by the child. She also chivvies the mother to get started on it (Key. in Vignette 2.).
+
+The key and door pattern is one of the harder ones to implement as it involves adding two new functions, which while simple enough, represent new code structures and thus this adds a new level of conceptual and practical complexity. The implementation of a new game design pattern (GDP) involve adding new code to the game. The amount of code and/ changes needed varied depending on its complexity. Larger changes typically need more careful manipulation of code and subsequent debugging.
+
+The child Olivia also wants to add additional levels to their game. In recent sessions several young participants had added new levels to their games, including Toby who added over twenty. This activity had sparked much discourse between participants which may have influence Olivia's interest.
+
+There is also awareness of and playfulness surrounding the conventions of a platformer game as a dynamic system in way which drives their work on the design and coding mechanics of the game.  An understanding of the game as a dynamic system is seen clearly in the parent’s alarm when, shortly after this interaction, the child deletes all elements of hazard in one level. The parent cautions "it's no fun if their are no hazards". I interprete the response of the child -  "It is for me!" - to show her awareness of the conventions of game design and a desire to work against them. Later the child articulate her motivation to _surprise_ players with this level design.
+
+
+
+
+SHIFT
+For this pair, these more involved coding activities were beyond the ability of the child. The parent Suzanna has taken on the role of solving harder code problems and in doing so has built important proficiency in coding practice. These include which include; finding and comprehending supporting documentation, fluidly navigating between undertaking more advanced coding to implement new GDPs, playtesting and preparing the coding environment for more basic coding of her child.
 
 
 <!-- PERHAPS A SCREENSHOT OF THE TEXT BOOK - PERHAPS NAVIGATING THE DROP DOWN MENU OF PATTERNS.  -->
 
 <!-- **Guided participation:**  -->
 
+SHIFT
 The parent takes action to involve her child in the design process when technical possible and to incorporate her child's interests.
 
+SHIFT
 THIS HAPPENS BEFORE THE VIGNETTE EXTRACT.
 In the full vignette transcription included in the appendices as Vignette 2, the parent overcomes her own hesitancy regarding asking for facilitator help by sending out her child to ask. When the code problem has been solve, she signals clearly to her child to return to the design process. This indicates that she is aware of the greater possibility for effective child input at these moments. After a blockage caused by debugging coding is removed, the parent immediately re-engages the child prompting the child to play-test the game. The child is one of the younger participants when blockages occur she explores the room or to dwell on the periphery of other participants interactions.
 
@@ -385,9 +322,6 @@ The supporting resources are available here.
 https://en.flossmanuals.net/phaser-game-making-in-glitch/_full/#game-mechanic-keys-and-doors -->
 <!-- **Cultural:**  -->
 
-The child Olivia also wants to add additional levels to their game. In recent sessions several young participants had added new levels to their games, including Toby who added over twenty. This activity had sparked much discourse between participants. It is likely that this Olivia's interest stems in part from observations of other participants games and this discourse. The child shows ongoing affective connection to the game making patterns. For example, one target game design pattern _Keys and Doors_ is repeated in a sing song voice by the child. She also chivvies the mother to get started on it (Key.)?..
-
-There is also awareness of and playfulness surrounding the conventions of a platformer game as a dynamic system in way which drives their work on the design and coding mechanics of the game.  An understanding of the game as a dynamic system is seen clearly in the parent’s alarm when, shortly after this interaction, the child deletes all elements of hazard in one level. The parent cautions "it's no fun if their are no hazards". I interprete the response of the child -  "It is for me!" - to show her awareness of the conventions of game design and a desire to work against them. Later the child articulate her motivation to _surprise_ players with this level design.
 
 <!-- This chapter now expands to represent this diversity of the coding and community practices of participants, focusing on their use of game design patterns. -->
 
@@ -427,7 +361,6 @@ In ask/imagine stages parent and child are able  discuss storytelling, graphical
 <!-- NOTE:  this addresses HOW THESE FINDING ARE STRUCTURED. MOVE TO INTRO? -->
 
 
-The following sections focus on the way design patterns are used by parents, children and facilitators in this emerging game making community. To present findings from video data, I draw on the Rogoff's three planes of analysis [@rogoff_observing_1995] as explored in chapter 3. Acknowledging that these observation do not fall nearly into each of the three planes, I cover observation on the use of GDPs relating to, in turn, personal knowledge, interpersonal activity and finally cultural activities. The observation of these sections are also guided by concepts of the development of shared objects and meditational tools and strategies and their role in emerging community norms and practices.
 
 <!-- Design stages (as explored in chapter two) are also used to guide categorisation , although the discussion of this chapter points to a more complex pattern of design that those outlined in many design cycles. -->
 
@@ -441,15 +374,91 @@ SHIFT THIS TO Methodolgy & SUMMARISE HERE -->
 
 ## Cultural Dimension
 
-### Role of playtesting PLAYTESTING IN NEXT CHAPTER CAN SOME BE MOVED HERE? and feedback and GDPs
+
+### The role of GDPs to facilitate learners to design for others
+
+<!-- NOTE - ALSO LINKED TO IDEATION? - is this guided participation? -->
 
 
-#### GDP concepts and language used in informal feedback for peers to influence modification of games
+
+#### The use of GDPs (especially during playtesting) can aid the process of imagining the end user experiences
 
 
-**GDPs aid the overall process of design for others by providing discreet and clear goals which are nested in the wider goal of making an engaging game.** - is this feedback cultural or guided participation - HOW IS THIS DIFFERENT FROM WHAT IS EXPLORED IN NAVIGATION?
 
-This process involves shifts in perspectives from participants as they engaging with objectives on different scopes of activity. For example, participants may get caught up in a particular design goal on a micro-level, engagement may drive an implementation of a quirky characteristic. When this game is self-tested or playtested, that characteristic may not withstand the shift in perspective to the wider goal of making an engaging game if it interferes with the engagement of the test suers.
+This section examines how the concept and experience of implementing GDPs provoked participants to imagine the experience of end users of their game.
+
+This process involves shifts in perspectives from participants as they engaging with objectives on different scopes of activity. For example, participants may get caught up in a particular design goal on a micro-level, engagement may drive an implementation of a quirky characteristic. When this game is self-tested or playtested, that characteristic may not withstand the shift in perspective to the wider goal of making an engaging game if it interferes with the engagement of the test users.
+FIND SUPPORT, ideally an example
+
+
+
+Game design patterns focused on gameplay rather than code structure focus on recognisable behaviour. Thus in the same way that visually organised code can aid ideation, designing code framework to help participants alter on a noticeable change in game play can foreground key GDPs.
+
+In the starting vignette of the chapter Olivia and Suzanna come into conflict over the imagined experience of future players. The parent is keen to keep a sense of game balance to ensure a sense of challenge for the imagined player. Suzanna shares _"Must be quite hard to get through that door._" when Suzanna places the exit door high above a platform. She then continues - _“It’s no fun having a game without any hazards to avoid.”_ The child seems determined to remove all hazards. _"It is for me!"_ the child counters. She may be aware of the implications for game balance but takes pleasure in this destruction of the key challenge of the game as an act of disruptive play (as explored in the previous chapter). This interaction shows the use of terms from GDPs to both explain and negotiate a conflict over the imagined user experience.
+
+<!-- Later Olivia interacts with one of the student helpers and outlines her motivations in design.
+
+    H1: Have you enjoyed making the game?
+    Olivia: Yes
+    H1- Has it been a lot of fun
+    Olivia: Yes and I like making it frustrating. that other people find it frustrating!
+    ...
+    Olivia: You’ve nearly got to mine. Mine’s very hard to get to.
+    H1. Is it?
+    Olivia: You’ll like it when you get to it.
+    H 1: How many levels do you have?
+    Olivia: Four. Mine’s the last one. And it’s very fun. Do you want to guess about it?
+    H1: Erghm. Is there lots of bikes?
+    Olivia: Yes, guess how many there are?
+    H1: Is it the whole screen?
+    Olivia: YES! Laughs
+    ...
+    H1: I will get it to your level
+    Olivia: You seem to not give up. that’s good
+    Olivia turns away to get a hug from her mother.
+    H1: I got to your level
+    Olivia: Good! (laughs)
+    Olivia: It’s a secret, special one. (...) If people tried hard they would get to my level. -->
+
+Th comments that she wants players to be frustrated when playing the game and that this is a contrast to final level which has only rewards and no hazards. This being a "secret, special" experience which plays against the norms of platform game design, thus provoking player surprise and fun. She notes the persistence of the student helper who pushes past her frustration to complete the game. Suzanna remark "If people tried hard they would get to my level" shows her awareness of that not all players will persist in the same way.
+
+<!-- #### Other examples and interpretation on designing for others / shifts of perspective
+In interpreting data there were other examples of pair partners and peers either commenting on or suggesting to others that they should imagining others user experience to suggest game design alterations of additions.
+PRIORITY HIGH
+Find other examples... -->
+<!-- Shifts can be described as shifting between levels of activity if viewing activity through an AT lens that encompasses nested levels of activity systems. -->
+
+<!-- There are different levels of designing for others
+One is just to make a playable game experience which by design involves an imagined user experience in the abstract. The example above shows a more playful and direct imagining of the experience of other people in the room a more tangible motivation with a more immediate reward. -->
+
+THIS SEEMS RELATIVELY WEAK AND PERHAPS A GOOD STRAND TO DROP
+A common proposal of research on professional and participatory design processes is that that ideation is more productive when informed by a realistic sense of the end user experience. (explored in Lit Review) The examples show different forms of designing for others. One is to imagine a user experience and make a playable game in the abstract which matches the mother's approach. Th's playful imagining of the experience of a more immediate audience of fellow game makers and supporting students appears to provide a tangible motivation with rapid rewards.
+
+POSSIBLE END TO THIS SECTION?
+**GDPs aid the overall process of design for others by providing discreet and clear goals which are nested in the wider goal of making an engaging game.**
+HOW IS THIS DIFFERENT FROM WHAT IS EXPLORED IN NAVIGATION?
+
+
+<!-- NOTE - ANY EVIDENCE FOR THIS BASED ON INTENTIONAL DESIGN OR IS THIS JUST AN OBSERVATION OF ORGANIC BEHAVIOUR?
+Designing for others - as a key per.spective in constructionism.
+Note: What added insights or tips for practitioners can I bring here?
+NOTE - cf Resnick Designing for Tinkerability - and the concepts in that.  -->
+
+
+<!-- - clear terms to use as a lingua-franca during self testing and playtesting. -->
+
+<!-- We have explored in the literature review the value of design as a process, to see surrounding world as a designed experience [@ratto_critical_2011].
+AND SO? -->
+
+#### Other examples and interpretation on designing for others / shifts of perspective
+
+In interpreting data there were other examples of pair partners and peers either commenting on or suggesting to others that they should imagining others user experience to suggest game design alterations.
+
+
+
+
+### GDP concepts and language used in informal feedback for peers to influence modification of games
+
 
 
 **The concepts of game challenge and game feel evolved through informal feedback during playtesting and served to influence peers to modify their games to increase the enjoyment of peer players.**
@@ -526,7 +535,7 @@ Player jump (y) velocity was set very high but left right (x) velocity was slow.
 <!-- These norming behaviours some of the informal norming behaviours that are less directive seen in the work of Rogoff and colleagues as explored in literature review [@rogoff_cultural_2003]. -->
 
 
-#### The propagation of use of GDPs (through playtesting() IS IT PLAYTESTING THAT IS IMPORTANT HERE - OR THE ROLE AND NATURE OF GDPS TO AID PROPAGATION
+### The propagation of use of GDPs -  (through playtesting() IS IT PLAYTESTING THAT IS IMPORTANT HERE - OR THE ROLE AND NATURE OF GDPS TO AID PROPAGATION
 
 **The implementation of particular GDPs by participant pairs or individuals often spread through peer activity.**
 
@@ -584,69 +593,6 @@ While Ed has only just been introduced to the ability to "cramp". He is happy an
 
 
 
-### The role of GDPs to facilitate learners to design for others
-
-<!-- NOTE - ALSO LINKED TO IDEATION? - is this guided participation? -->
-
-
-#### Referring to GDPs (especially during playtesting) can help scaffold the process of imagining the end user experiences.
-
-As explored previously, playtesing as a regular practice can shift learners to a perspective of designing for others. This section examines how some GDPs  provoked participants to imagine the experience of end users of their game. Game design patterns focused on gameplay rather than code structure focus on recognisable behaviour. Thus in the same way that visually organised code can aid ideation, designing code framework to help participants alter on a noticeable change in game play can foreground key GDPs.
-
-In the starting vignette of the chapter Olivia and Suzanna come into conflict over the imagined experience of future players. The parent is keen to keep a sense of game balance to ensure a sense of challenge for the imagined player. Suzanna shares _"Must be quite hard to get through that door._" when Suzanna places the exit door high above a platform. She then continues - _“It’s no fun having a game without any hazards to avoid.”_ The child seems determined to remove all hazards. _"It is for me!"_ the child counters. She may be aware of the implications for game balance but takes pleasure in this destruction of the key challenge of the game as an act of disruptive play (as explored in the previous chapter). This interaction shows the use of terms from GDPs to both explain and negotiate a conflict over the imagined user experience.
-
-<!-- Later Olivia interacts with one of the student helpers and outlines her motivations in design.
-
-    H1: Have you enjoyed making the game?
-    Olivia: Yes
-    H1- Has it been a lot of fun
-    Olivia: Yes and I like making it frustrating. that other people find it frustrating!
-    ...
-    Olivia: You’ve nearly got to mine. Mine’s very hard to get to.
-    H1. Is it?
-    Olivia: You’ll like it when you get to it.
-    H 1: How many levels do you have?
-    Olivia: Four. Mine’s the last one. And it’s very fun. Do you want to guess about it?
-    H1: Erghm. Is there lots of bikes?
-    Olivia: Yes, guess how many there are?
-    H1: Is it the whole screen?
-    Olivia: YES! Laughs
-    ...
-    H1: I will get it to your level
-    Olivia: You seem to not give up. that’s good
-    Olivia turns away to get a hug from her mother.
-    H1: I got to your level
-    Olivia: Good! (laughs)
-    Olivia: It’s a secret, special one. (...) If people tried hard they would get to my level. -->
-
-Th comments that she wants players to be frustrated when playing the game and that this is a contrast to final level which has only rewards and no hazards. This being a "secret, special" experience which plays against the norms of platform game design, thus provoking player surprise and fun. She notes the persistence of the student helper who pushes past her frustration to complete the game. Suzanna remark "If people tried hard they would get to my level" shows her awareness of that not all players will persist in the same way.
-
-<!-- #### Other examples and interpretation on designing for others / shifts of perspective
-In interpreting data there were other examples of pair partners and peers either commenting on or suggesting to others that they should imagining others user experience to suggest game design alterations of additions.
-PRIORITY HIGH
-Find other examples... -->
-<!-- Shifts can be described as shifting between levels of activity if viewing activity through an AT lens that encompasses nested levels of activity systems. -->
-
-<!-- There are different levels of designing for others
-One is just to make a playable game experience which by design involves an imagined user experience in the abstract. The example above shows a more playful and direct imagining of the experience of other people in the room a more tangible motivation with a more immediate reward. -->
-
-THIS SEEMS RELATIVELY WEAK AND PERHAPS A GOOD STRAND TO DROP
-A common proposal of research on professional and participatory design processes is that that ideation is more productive when informed by a realistic sense of the end user experience. (explored in Lit Review) The examples show different forms of designing for others. One is to imagine a user experience and make a playable game in the abstract which matches the mother's approach. Th's playful imagining of the experience of a more immediate audience of fellow game makers and supporting students appears to provide a tangible motivation with rapid rewards.
-
-<!-- NOTE - ANY EVIDENCE FOR THIS BASED ON INTENTIONAL DESIGN OR IS THIS JUST AN OBSERVATION OF ORGANIC BEHAVIOUR?
-Designing for others - as a key per.spective in constructionism.
-Note: What added insights or tips for practitioners can I bring here?
-NOTE - cf Resnick Designing for Tinkerability - and the concepts in that.  -->
-
-
-<!-- - clear terms to use as a lingua-franca during self testing and playtesting. -->
-
-<!-- We have explored in the literature review the value of design as a process, to see surrounding world as a designed experience [@ratto_critical_2011].
-AND SO? -->
-
-#### Other examples and interpretation on designing for others / shifts of perspective
-
-In interpreting data there were other examples of pair partners and peers either commenting on or suggesting to others that they should imagining others user experience to suggest game design alterations.
 
 
 
