statement to support about use of intermediate-level construct

--- a/_posts/thesis_chapters/2024-11-6-Gdps.md
+++ b/_posts/thesis_chapters/2024-11-6-Gdps.md
@@ -281,7 +281,7 @@ MOVE A LOT OF THIS TO THE APPENDIX - CREATE A SUMMARY HERE.
 <!-- **Describing on a level of personal** -->
 
 
-As a summary of activity not related specifically to GDPs : use of child to get help, legitimate peripheral participant of child, elements and use of supporting documentation. 
+As a summary of activity not related specifically to GDPs : use of child to get help, legitimate peripheral participant of child, elements and use of supporting documentation.
 
 These aspects are analysed in both the vignette 2 and in Chapter 7 with reference to participant agency.
 
@@ -1410,11 +1410,15 @@ From the perspective of participants and facilitators, the process can be transf
 <!-- A deeper exploration of other concepts may suit another chapter looking at synthesing observations in relation to broader research.  -->
 
 
-### Design patterns as a mid-level pedagogical framework
+### Design patterns as a intermediate-level, pedagogical framework
 
 <!-- NOTE - PARTS OF THIS WERE MOVED TO THE LIT REVIEW. -->
 
 In chapter two I described the characteristic and limits of computational thinking as a pedagogical framework, specifically concepts include: varied interpretations; the role of levels of abstraction for teachers and learners; and the value of epistemological pluralism as a way to value concrete approaches.
+
+RESTRUCTURE FOLLOWING TO SUPPORT THIS STATEMENT. 
+The evidence and examples surfaced in this paragraph support a claim that GDPs, as an intermediate-level organisation framework between abstract and concrete coding concepts.  
+
 
 ---
 
@@ -1430,6 +1434,8 @@ This conception of levels abstraction can be applied in this learning design to 
 SHIFT LATER?
 
 As previously explored I had a reluctance to shift learners away from the practical implementation of repeated game design patterns to focus on more abstract, de-contextualised conceptions of the knowledge. My concern hinged on the potential disorientation of imposed shifts of focus between different stages of creation the object of their activity shifts from the larger goal of making an engaging game to a narrower goal of implementing a game design pattern and the technical actions and operations needed to complete it. -->
+
+
 
 RECAP OTHER WORK ON GDP AND THEIR USES - REINTERPRETE IT VIA AT CONCEPTS - MEDIATION
 
