notes on tensions around agency and GDPs - perhaps as a link to conclusion.

--- a/_posts/thesis_chapters/2024-11-6-Gdps.md
+++ b/_posts/thesis_chapters/2024-11-6-Gdps.md
@@ -1416,7 +1416,7 @@ From the perspective of participants and facilitators, the process can be transf
 
 In chapter two I described the characteristic and limits of computational thinking as a pedagogical framework, specifically concepts include: varied interpretations; the role of levels of abstraction for teachers and learners; and the value of epistemological pluralism as a way to value concrete approaches.
 
-RESTRUCTURE FOLLOWING TO SUPPORT THIS STATEMENT. 
+RESTRUCTURE FOLLOWING TO SUPPORT THIS STATEMENT.
 The evidence and examples surfaced in this paragraph support a claim that GDPs, as an intermediate-level organisation framework between abstract and concrete coding concepts.  
 
 
@@ -1518,7 +1518,7 @@ The processes described above align with PBL and UDL in a way that merits furthe
 
 
 
-#### Tensions between facilitating agency and norming practices - MOVE  up OR COMPRESS INTO THIS CHAPTER
+#### Tensions between facilitating agency and norming practices - MOVE  up OR COMPRESS INTO THIS CHAPTER - OR AS A LINK TO NEXT CHAPTER IN CONCLUSION ?
 
 Participants are able to use the affordances of the existing learning design and add their own evolving practice to them as a way of expressing and building agency.
 
