Mediational strategies at the start.

--- a/_posts/thesis_chapters/2024-11-6-Gdps.md
+++ b/_posts/thesis_chapters/2024-11-6-Gdps.md
@@ -170,6 +170,20 @@ The last chapter explored the mutual evolution of the learning design, shaped by
 
 While these approaches are  distinct in their pedagogical use, they stemmed from the same germ-cell activity of altering the game through the use of game design patterns via varied means. These include: use as part of meditational strategies by participants and facilitators and as shared objects between participants, facilitators and peers (as explored in chapter three and four).
 
+**GDPs can be used as meditational strategies within the AT framework and thus conceptual understanding of participant agency**
+
+MOVE THIS UP RIGHT TO THE TOP - NOTHING NEW HERE. PERHAPS AFTER INTRO WITH GERM CELL?
+
+GDPs are frequently used as mediational strategies -  [@lecusay_telementoring_2015].
+
+This can be understood in relation to relevant socio cultural theory in the following way, affordences, mutual tool development, FoI, etc.
+
+We can frame how these process contribute to the development of agency on the part of participants in the following way.
+
+BEGIN INTRODUCTION TO ANALYSIS OF AGENCY.
+
+These concepts and this framing is explore in the next chapter with examples that extend beyond the use of GDPs to other cultural processes.
+
 _Structure of the chapter around 3 planes / activity system scopes_
 
 The sections focus on the way design patterns are used by parents, children and facilitators in this emerging game making community.
@@ -1460,7 +1474,7 @@ There are challenges of the use of these short cuts and at a more general the de
 
 
 
-### Implications and beginnings of suggestions for practitioners
+### Implications and beginnings of suggestions for practitioners  - IS THIS FOR THE CONCLUSION? OR MERGE SOME UP - WITHIN THE SECTION THAT THEY REFER TO?
 
 
 NOTE - SUPPORT NEEDED FOR SOME OF THE BELOW - AND MORE DISCUSSION NEEDED ON CHALLENGE IN GENERAL
@@ -1473,17 +1487,7 @@ The process of creating a learning design where students were able to choose fro
 <!-- NOTE -  REFRAMING WITH A FOCUS ON AGENCY - IDEALLY THE LATER -->
 <!-- Using a choice of patterns when compared to instructional tutorials (previously explored in methods chapter)  -->
 
-**GDPs can be used as meditational strategies within the AT framework and thus conceptual understanding of participant agency**
 
-GDPs are frequently used as mediational strategies [@lecusay_telementoring_2015].
-
-This can be understood in relation to relevant socio cultural theory in the following way, affordences, mutual tool development, FoI, etc.
-
-We can frame how these process contribute to the development of agency on the part of participants in the following way.
-
-BEGIN INTRODUCTION TO ANALYSIS OF AGENCY.
-
-These concepts and this framing is explore in the next chapter with examples that extend beyond the use of GDPs to other cultural processes.
 
 **The concept of a restricted activity helps us understand the value a GDP collection for participants**
 
